--- a/1-Interface-Grafica-XML/app/src/main/res/layout/activity_main.xml
+++ b/1-Interface-Grafica-XML/app/src/main/res/layout/activity_main.xml
@@ -4,5 +4,27 @@
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Mi primera aplicación en Android"
+        android:layout_gravity="center_horizontal"
+        android:textSize="20sp"
+        android:layout_margin="10dp"
+        android:textColor="#000"
+        android:padding="10dp"/>
     
+    <EditText
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:hint="Ingrese su nombre"
+        android:layout_margin="10dp"
+        android:layout_gravity="center_horizontal"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Saludar"/>
+
+
 </LinearLayout>
