--- a/2-weight-LinearLayout/app/src/main/res/layout/activity_main.xml
+++ b/2-weight-LinearLayout/app/src/main/res/layout/activity_main.xml
@@ -1,23 +1,23 @@
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <Button
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="25%"
         android:layout_weight="1"/>
 
     <Button
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="25%"
         android:layout_weight="1"/>
 
     <Button
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="50%"
         android:layout_weight="2"/>
