--- a/5-SetOnClickListener-event/app/src/main/res/layout/activity_main.xml
+++ b/5-SetOnClickListener-event/app/src/main/res/layout/activity_main.xml
@@ -11,9 +11,20 @@
         android:layout_margin="20dp"/>
 
     <Button
-        android:id="@+id/btnSal"
+        android:id="@+id/btnSaludar"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="Saludar"/>
+        android:text="Saludar"
+        android:layout_gravity="center_horizontal"/>
+
+    <TextView
+        android:id="@+id/tvResultado"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="30sp"
+        android:textColor="#d45353"
+        android:text="Texto de prueba"
+        android:layout_marginTop="10dp"
+        android:layout_gravity="center_horizontal"/>
 
 </LinearLayout>
