--- a/6-RadioButton-CheckBox/app/src/main/res/layout/activity_main.xml
+++ b/6-RadioButton-CheckBox/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,51 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<LinearLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.a6_radiobutton_checkbox.MainActivity">
+    android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <TextView
+    <RadioGroup
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_margin="10dp">
+
+        <RadioButton
+            android:id="@+id/rbUno"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Radio Uno"/>
+
+        <RadioButton
+            android:id="@+id/rbDos"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Radio Dos"/>
+
+    </RadioGroup>
+
+    <CheckBox
+        android:id="@+id/cboxTres"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="Check Tres"/>
 
-</android.support.constraint.ConstraintLayout>
+    <CheckBox
+        android:id="@+id/cboxCuatro"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Check Cuatro"/>
+
+    <Button
+        android:id="@+id/btnSeleccion"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Seleccion"/>
+
+    <TextView
+        android:id="@+id/tvSeleccion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="Seleccion"/>
+
+</LinearLayout>
