--- a/7-Spinner-ResourceFile-XML/app/src/main/res/layout/activity_main.xml
+++ b/7-Spinner-ResourceFile-XML/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,27 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<LinearLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.a7_spinner_resourcefile_xml.MainActivity">
+    android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <TextView
+<TextView
+        android:id="@+id/tvTitulo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:gravity="center_horizontal"
+        android:text="Spinner con valores definidos en un Archivo de recursos"
+        android:textSize="20sp"
+        android:textColor="#000"
+        android:layout_margin="10dp"/>
 
-</android.support.constraint.ConstraintLayout>
+    <Spinner
+        android:id="@+id/spPlanetas"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="10dp">
+
+    </Spinner>
+
+</LinearLayout>
+
+
