Spinner con opciones de ArrayList
Otra forma de llenar una lista desplegable, es agregando los valores en
un ArrayList, para ello he creado un ArrayList llamado lenguajes y he
colocado unos valores. Luego de definir el array uso un ArrayAdapter y
le paso por parámetro el contexto, el Diseño y el array para mostrar.

Finalmente aplico el adaptador al Spinner con el método setAdapter();

--- a/7-Spinner-ResourceFile-XML/app/src/main/res/layout/activity_main.xml
+++ b/7-Spinner-ResourceFile-XML/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:text="Spinner con valores definidos en un Archivo de recursos"
+        android:text="Spinner con valores definidos en un ArrayList"
         android:textSize="20sp"
         android:textColor="#000"
         android:layout_margin="10dp"/>
