--- a/9-cambiar-entre-activities/app/src/main/res/layout/activity_two.xml
+++ b/9-cambiar-entre-activities/app/src/main/res/layout/activity_two.xml
@@ -1,9 +1,20 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.a9_cambiar_entre_activities.TwoActivity">
+    android:orientation="horizontal"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-</android.support.constraint.ConstraintLayout>
+   <Button
+       android:id="@+id/btnVolver"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:text="Volver"
+       android:layout_weight="1"/>
+
+    <Button
+        android:id="@+id/btnSalir"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Salir"
+        android:layout_weight="1"/>
+
+</LinearLayout>
