--- a/11-animar-boton-personalizado/app/src/main/res/layout/activity_main.xml
+++ b/11-animar-boton-personalizado/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <Button
-        android:onClick="saludar"
+        android:id="@+id/btnSaludar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
