--- a/14-SplashScreen-android/app/src/main/res/layout/activity_main.xml
+++ b/14-SplashScreen-android/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,13 @@
 <RelativeLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f2edb1"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <ImageView
-        android:src="@drawable/android"
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="30sp"
+        android:text="Bienvenido"
         android:layout_centerInParent="true"/>
 
 </RelativeLayout>
