Google Maps - Actividad de Mapas
La Actividad de Mapas se extiende de la Clase FragmentActivity e
implementa un método OnMapReadyCall, que es el que se ejecutará al
momento de iniciarse la actividad y mostrará lo que tenga contenido en
el.

Como se usa la API de Google Maps, se debe crear un Objeto de GoogleMap,
que se usará para toda la configuración de los mapas.

Para agregar un marcador, debemos usar el Objeto LatLng y le pasamos por
parámetros la latitud y longitud, de esta manera obtenemos un punto de
referencia para colocar la camara fijada, y pues existen una serie de
métodos que se pueden usar para hacer una expriencia más agradable al
usuario.

--- a/20-Mapas-en-android/app/src/debug/res/values/google_maps_api.xml
+++ b/20-Mapas-en-android/app/src/debug/res/values/google_maps_api.xml
@@ -20,5 +20,5 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-    <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">YOUR KEY HERE</string>
+    <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">AIzaSyBU11k6Oo8J-GVR9JnVTQl9_vLRuVxMjBY</string>
 </resources>
