--- a/21-Volley/app/src/main/res/layout/activity_main.xml
+++ b/21-Volley/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,17 @@
     tools:context="com.example.a21_volley.MainActivity">
 
     <TextView
+        android:id="@+id/tvResponse"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:text="Hello World!"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.502" />
 
 </android.support.constraint.ConstraintLayout>
