Sugar - Crear base de datos Guardar y Consultar
Para usar Sugar en el almacenamiento local de Información debemos hacer
lo siguiente:
1. Agregar la librería en las dependencias del archivo build.gradle
2. Cambiar el nombre de la aplicación en el manifest
3. Agregar meta-data en el manifest indicando el nombre de la base de
datos, la version, el registro de consultar y el nombre del dominio del
paquete
4. Si se presenta errores quitar el icono de la aplicación, Esto sucede
porque la librería tiene también el mismo nombre de ícono y entra en
conflicto con el de la aplicación que estamos desarrollando
5. Crear la clase que representarán las entidades en la base de datos.
Cada clase debe extender de SugarRecord
6. En cada uno de los eventos de los botones hacer las respectivas
funciones, con el método save(), guarda los datos y con find(), los
consulta.

--- a/22-Sugar-ORM-for-SQLite/app/src/main/res/layout/activity_main.xml
+++ b/22-Sugar-ORM-for-SQLite/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,72 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<LinearLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.a22_sugar_orm_for_sqlite.MainActivity">
+    android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="Bases de Datos con Sugar"
+        android:textSize="25sp"
+        android:textAlignment="center"
+        android:layout_margin="10dp"/>
 
-</android.support.constraint.ConstraintLayout>
+    <EditText
+        android:id="@+id/etIdentificacion"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="15dp"
+        android:layout_marginLeft="15dp"
+        android:hint="Identificacion"
+        android:inputType="number"/>
+
+    <EditText
+        android:id="@+id/etNombres"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="15dp"
+        android:layout_marginLeft="15dp"
+        android:hint="Nombres"
+        android:inputType="textPersonName"/>
+
+    <EditText
+        android:id="@+id/etApellidos"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="15dp"
+        android:layout_marginLeft="15dp"
+        android:hint="Apellidos"
+        android:inputType="textPersonName"/>
+
+    <EditText
+        android:id="@+id/etTelefono"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="15dp"
+        android:layout_marginLeft="15dp"
+        android:hint="Teléfono"
+        android:inputType="phone"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btnGuardar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Guardar"
+            android:layout_weight="1"/>
+
+        <Button
+            android:id="@+id/btnConsultar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Consultar"
+            android:layout_weight="1"/>
+
+    </LinearLayout>
+
+</LinearLayout>
