--- a/22-Sugar-ORM-for-SQLite/app/src/main/res/layout-land/activity_main.xml
+++ b/22-Sugar-ORM-for-SQLite/app/src/main/res/layout-land/activity_main.xml
@@ -1,7 +1,13 @@
 <LinearLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_weight="4">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -81,10 +87,20 @@
         </LinearLayout>
     </ScrollView>
 
-    <ListView
-        android:id="@+id/lvResultados"
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="10dp"></ListView>
+        android:orientation="vertical"
+        android:layout_weight="6">
+
+        <ListView
+            android:id="@+id/lvResultados"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp"></ListView>
+
+    </LinearLayout>
 
 </LinearLayout>
